# EmbedShift---Embedding-Migration-Framework

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  Info.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-db.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  embedders.py  embedders_voyage.py  main.py  services.py
app/api/: health.py  migration.py
app/core/: __init__.py  evaluation.py  gate.py  mapper.py  metrics.py  mlp.py  pipeline.py  transform.py
app/models/: api.py  evaluation.py  health.py  migration.py
app/stores/: __init__.py  base.py  factory.py  file_store.py  formats.py  memory_store.py  pinecone_store.py  qdrant_store.py  synthetic.py
app/utils/: logging.py  numerics.py
docs/: CONFIDENCE_REPORT.md  CONFIGURATION.md
examples/: quickstart.py
scripts/: eval_indexes.py  pinecone_dump.py  pinecone_inspect.py
tests/: test_api.py  test_evaluation.py  test_file_store.py  test_gate.py  test_health.py  test_mapper.py  test_memory_store.py  test_metrics.py  test_mlp.py  test_pinecone_store.py  test_pipeline.py  test_qdrant_store.py  test_transform.py  test_voyage_embedder.py
